login modal/route create & styled

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fix": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +43,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwind": "^4.0.0",
+    "tailwind-clip-path": "^1.0.0",
     "tailwind-scrollbar": "^2.0.1"
   }
 }
