--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,9 @@
 {
+  "version": 2,
+   "name": "litelight",
+   "builds": [
+      { "src": "server.js", "use": "@vercel/node" }
+   ],
   "headers": [
     {
       "source": "/api/(.*)",
